Finished vertical slabs and added shelves for all woods